# Roselle

./: .gitignore  LICENSE  README.md  pyproject.toml
src/roselle/: __init__.py  cli.py  converter.py
